// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Binning Navigator Renders the Binning navigator component 1`] = `
<StackNavigator
  screenOptions={
    {
      "headerMode": "float",
      "headerStyle": {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
    }
  }
>
  <Screen
    component={[Function]}
    listeners={
      {
        "beforeRemove": [Function],
        "blur": [Function],
      }
    }
    name="BinningHome"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.BINNING.BINNING" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AssignLocation"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.BINNING.ASSIGN_LOCATION" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="ManagePallet"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.PALLET.MANAGE_PALLET" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="CombinePallets"
    options={
      {
        "headerRight": [Function],
        "headerTitle": "[missing "en.PALLET.COMBINE_PALLETS" translation]",
      }
    }
  />
</StackNavigator>
`;

exports[`Binning Navigator Renders the scanButton header icon for Binning Screen when not rightmost button 1`] = `
<TouchableOpacity
  hostRef={null}
  onPress={[Function]}
  testID="scanButton"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingLeft": 15,
      }
    }
  >
    <Icon
      color="#ffffffff"
      name="barcode-scan"
      size={20}
    />
  </View>
</TouchableOpacity>
`;

exports[`Binning Navigator Renders the scanButton header icon for Binning Screen when rightmost button 1`] = `
<TouchableOpacity
  hostRef={null}
  onPress={[Function]}
  testID="scanButton"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 15,
      }
    }
  >
    <Icon
      color="#ffffffff"
      name="barcode-scan"
      size={20}
    />
  </View>
</TouchableOpacity>
`;
